finish about section

--- a/index.html
+++ b/index.html
@@ -25,15 +25,33 @@
 		</ul>
 	</div>
 	<div class="jumbotron">
-		<div class="big-box">
-		<div class="small-box"></div>
-		<div class="small-box small-box-2">
-			<p>I am Jia Jing. I like to see lenglui. what if this sit getting longer and longer</p>
+		<div class="jumbo-frame">
+			<div class="jumbo-img">
+				<img src="image/topblock_pouchwithpowder.png" class="jumbo-main-image" alt="">
+			</div>
+			<div class="text-box">
+				<p>A Full Meal Macro in One Convenient Drink</p>
+				<div class="btn-gold">Standard Pack (15 packs) - RM 165</div>
+				<div class="btn-gold">Advance Pack (30 packs) - RM 299</div>
+			</div>
+			<div class="clearfix"></div>
 		</div>
-		<div class="small-box small-box-3"></div>
+	</div>
+	<section id="about">
+		<div class="about">
+			<div class="about-box">
+				<p class="about-title">What is Macrolixir ?</p>
+				<p class="about-text">
+					Macrolixir is a powdered food packed with complete macros of one healthy meal. It’s the saviour for people with trouble consuming a proper breakfast. It is also a time-saver to nutritionally fuel the body of people who is running on tight schedule building their empire.
+				</p>	
+			</div>
+			<img src="image/about_pouch.png" alt="" class="about-img">
+		</div>
+	</section>
+	<section id="ingredient">
 		
-	</div>
-	</div>
+	</section>
+
 
 
 </body>
