doing how it work

--- a/index.html
+++ b/index.html
@@ -49,7 +49,76 @@
 		</div>
 	</section>
 	<section id="ingredient">
+		<div class="ingredient">
+			<p class="section-title">Ingredient</p>	
+			<p class="section-description">The Finest of the Meal</p>
+			<div class="ingredient-box">
+				<div class="oats-box food-box">
+					<div class="ingredients-details oats">
+						<p class="ingredient-name">Oats</p>
+						<p class="ingredient-description">Main carbohydrate source.</p>
+					</div>
+					<img src="image/ingredients_oats.png" alt="" class="oats-img">
+				</div>
+				<div class="flaxseed-box food-box">
+					<img src="image/ingredients_flaxseed.png" alt="" class="flaxseed-img">
+					<div class="ingredients-details flaxseed">
+						<p class="ingredient-name">Flaxseed</p>
+						<p class="ingredient-description">Main carbohydrate source.</p>
+					</div>	
+				</div>
+				<div class="almond-box food-box">
+					<div class="ingredients-details almond">
+						<p class="ingredient-name">Almond</p>
+						<p class="ingredient-description">Omega-3 fatty acids, fiber and protein.</p>
+					</div>
+					<img src="image/ingredients_almond.png" alt="" class="almond-img">
+				</div>
+				<div class="whey-box food-box">
+
+					<div class="ingredients-details whey">
+						<p class="ingredient-name">Whey Protein</p>
+						<p class="ingredient-description">Amino acids and main protein source.</p>
+					</div>
+					<img src="image/ingredients_whey.png" alt="" class="whey-img">
+				</div>
+				<div class="sugar-box food-box">
+					<img src="image/ingredients_sugar.png" alt="" class="sugar-img">
+					<div class="ingredients-details sugar">
+						<p class="ingredient-name">Destrose</p>
+						<p class="ingredient-description">Fast carbohydrate for instant energy</p>
+					</div>
+					
+				</div>
+			</div>
+		</div>
 		
+	</section>
+	<section id="work">
+		<div class="work">
+			<div class="title-box">
+				<p class="section-title">How it work</p>	
+				<p class="section-description">Easy & Time-saving</p>	
+			</div>
+			<div class="work-box">
+				<div class="step step1">
+					<img src="image/howitworks_pouricon.png" alt="">
+					<p class="step-title">Pour</p>
+					<p class="step-description">Tear the pouch and pour the powder into a shaker</p>
+				</div>
+				<div class="step step2">
+					<img src="image/howitworks_mixicon.png" alt="">
+					<p class="step-title">Mix</p>
+					<p class="step-description">pour 2 cups of water into the bottle containing powder</p>
+				</div>
+				<div class="step step3">
+					<img src="image/howitworks_shakeicon.png" alt="">
+					<p class="step-title">Pour</p>
+					<p class="step-description">Mix your fuel by shaking it</p>
+				</div>
+				
+			</div>
+		</div>
 	</section>
 
 
