finish macro page

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 				<p class="about-title">What is Macrolixir ?</p>
 				<p class="about-text">
 					Macrolixir is a powdered food packed with complete macros of one healthy meal. It’s the saviour for people with trouble consuming a proper breakfast. It is also a time-saver to nutritionally fuel the body of people who is running on tight schedule building their empire.
-				</p>	
+				</p>
 			</div>
 			<img src="image/about_pouch.png" alt="" class="about-img">
 		</div>
 	</section>
 	<section id="ingredient">
 		<div class="ingredient">
-			<p class="section-title">Ingredient</p>	
+			<p class="section-title">Ingredient</p>
 			<p class="section-description">The Finest of the Meal</p>
 			<div class="ingredient-box">
 				<div class="oats-box food-box">
@@ -65,7 +65,7 @@
 					<div class="ingredients-details flaxseed">
 						<p class="ingredient-name">Flaxseed</p>
 						<p class="ingredient-description">Main carbohydrate source.</p>
-					</div>	
+					</div>
 				</div>
 				<div class="almond-box food-box">
 					<div class="ingredients-details almond">
@@ -88,17 +88,17 @@
 						<p class="ingredient-name">Destrose</p>
 						<p class="ingredient-description">Fast carbohydrate for instant energy</p>
 					</div>
-					
+
 				</div>
 			</div>
 		</div>
-		
+
 	</section>
 	<section id="work">
 		<div class="work">
 			<div class="title-box">
-				<p class="section-title">How it work</p>	
-				<p class="section-description">Easy & Time-saving</p>	
+				<p class="section-title">How it work</p>
+				<p class="section-description">Easy & Time-saving</p>
 			</div>
 			<div class="work-box">
 				<div class="step step1">
@@ -109,15 +109,90 @@
 				<div class="step step2">
 					<img src="image/howitworks_mixicon.png" alt="">
 					<p class="step-title">Mix</p>
-					<p class="step-description">pour 2 cups of water into the bottle containing powder</p>
+					<p class="step-description">Pour 2 cups of water into the bottle containing powder</p>
 				</div>
 				<div class="step step3">
 					<img src="image/howitworks_shakeicon.png" alt="">
 					<p class="step-title">Pour</p>
 					<p class="step-description">Mix your fuel by shaking it</p>
 				</div>
-				
 			</div>
+		</div>
+	</section>
+	<section id="macro">
+		<div class="macro">
+			<p class="section-title">Macros</p>
+			<p class="section-description">The Finest of the Meal</p>
+			<div class="macro-box">
+				<div class="shaker">
+					<img src="image/macros_shaker.png" alt="" class="shaker-image">
+					<div class="macro-percentage percent-50">
+						<p class="macro-percentage-value">50%</p>
+						<p class="macro-food-name">carbs</p>
+					</div>
+					<div class="macro-percentage percent-30">
+						<p class="macro-percentage-value">30%</p>
+						<p class="macro-food-name">protein</p>
+					</div>
+					<div class="macro-percentage percent-20">
+						<p class="macro-percentage-value">20%</p>
+						<p class="macro-food-name">fats</p>
+					</div>
+				</div>
+				<div class="nutrition-box">
+					<div class="nutrition-header">
+						<p class="nutrition-title">
+						Nutrition Fact
+						</p>
+						<p class="nutrition-description">
+							Serving size: 124g
+						</p>
+					</div>
+					<div class="nutrition-subtitle">
+						<p class="nutrition-description nutrition-description-bold">
+							Amount per serving
+						</p>
+						<p class="nutrition-description">
+							Calories(kcal): 400
+						</p>
+					</div>
+					<div class="nutrition-body">
+						<div class="nutrition-fact-subtitle">
+							<p class="nutrition-fact">Daily Value</p>
+						</div>
+						<div class="nutrition-fact">
+							<p class="nutrition-type">Top Carbohydrate</p>
+							<p class="nutrition-value">50g</p>
+						</div>
+						<div class="nutrition-fact">
+							<p class="nutrition-type nutrition-subtype">Fast Carbs </p>
+							<p class="nutrition-value">5g</p>
+						</div>
+						<div class="nutrition-fact">
+							<p class="nutrition-type nutrition-subtype">Fiber</p>
+							<p class="nutrition-value">6.4g</p>
+						</div>
+						<div class="nutrition-fact">
+							<p class="nutrition-type">Top Protein</p>
+							<p class="nutrition-value">30g</p>
+						</div>
+						<div class="nutrition-fact">
+							<p class="nutrition-type">Top Fats</p>
+							<p class="nutrition-value">9g</p>
+						</div>
+					</div>
+					<div class="nutrition-footer">
+						<p class="nutrition-alert">
+							* Allegen: Milk, Soy (Lecithin) and Nuts
+						</p>
+						<p class="nutrition-alert">
+							* Manufactured in facility that also uses:
+								tree nuts, soy, wheat and milk
+						</p>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</section>
 
