optimizing navigation bar

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Macrolixir | Buy Now</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="normalize.css">
@@ -17,7 +18,7 @@
 		<ul>
 			<li><a href="#">About</a></li>
 			<li><a href="#">Ingredient</a></li>
-			<li>
+			<li id="icon-list">
 				<img src="image/topblock_logo.png" alt="" class="main-logo">
 			</li>
 			<li><a href="#">How it work</a></li>
@@ -74,14 +75,7 @@
 					</div>
 					<img src="image/ingredients_almond.png" alt="" class="almond-img">
 				</div>
-				<div class="whey-box food-box">
 
-					<div class="ingredients-details whey">
-						<p class="ingredient-name">Whey Protein</p>
-						<p class="ingredient-description">Amino acids and main protein source.</p>
-					</div>
-					<img src="image/ingredients_whey.png" alt="" class="whey-img">
-				</div>
 				<div class="sugar-box food-box">
 					<img src="image/ingredients_sugar.png" alt="" class="sugar-img">
 					<div class="ingredients-details sugar">
@@ -89,6 +83,14 @@
 						<p class="ingredient-description">Fast carbohydrate for instant energy</p>
 					</div>
 
+				</div>
+				<div class="whey-box food-box">
+
+					<div class="ingredients-details whey">
+						<p class="ingredient-name">Whey Protein</p>
+						<p class="ingredient-description">Amino acids and main protein source.</p>
+					</div>
+					<img src="image/ingredients_whey.png" alt="" class="whey-img">
 				</div>
 			</div>
 		</div>
@@ -195,7 +197,51 @@
 
 		</div>
 	</section>
+	<section id="purchase">
+		<div class="purchase">
+			<p class="section-title">Macros</p>
+			<p class="section-description">The Finest of the Meal</p>
+			<div class="trial">
+				<img src="image/purchase_trialpic3.png" alt="" class="purchase-img">
+				<div class="purchase-detail">
+					<p class="purchase-title">
+						Get a trial now
+					</p>
+					<p class="purchase-description">
+						You might first time heard about Macrolixir, no worry.
+						Get yourself a trial pack and come back for more if you like it.
+					</p>
+					<div class="btn-gold btn-purchase">Connect to get a trial pack</div>
+					<p class="product-detail">* Consists of 2 packs of Macrolixir [400kcal]</p>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+			<div class="sell_pack">
+				<img src="image/purchase_weeklypic.png" alt="" class="purchase-img">
+				<div class="purchase-detail">
+					<p class="purchase-title">
+						Start being Healthy
+					</p>
+					<p class="purchase-description">
+						You might first time heard about Macrolixir, no worry.
+						Get yourself a trial pack and come back for more if you like it.
+					</p>
+					<div class="btn-gold btn-purchase">Standard Pack - RM 165</div>
+					<p class="product-detail">* Consists of 15 packs of Macrolixir [400kcal]</p>
+					<div class="btn-gold btn-purchase">Advance Pack - Rm 299</div>
+					<p class="product-detail">* Consists of 30 packs of Macrolixir [400kcal]</p>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+		</div>
+	</section>
+	<section id="footer">
+		<div class="footer">
+			<img src="image/topblock_logo.png" alt="" class="main-logo">
+			<p>COPYRIGHT @ MACROLIXIR.COM</p>
 
+		</div>
+	</section>
 
 
 </body>
