finish mobile version

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 			Macrolixir . The Savior for the meal skipper
 		</p>
 	</div>
-	<div class="navbar">
+	<div class="navbar mobile-navbar">
+		<ul>
+			<li id="icon-list" class="main-logo2">
+				<img src="image/topblock_logo.png" alt="" class="main-logo">
+			</li>
+		</ul>
+	</div>
+	<div class="navbar desktop-navbar">
 		<ul>
 			<li><a href="#">About</a></li>
 			<li><a href="#">Ingredient</a></li>
