change gold and blue color

--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
 			<p class="section-description">The Finest of the Meal</p>
 			<div class="ingredient-box">
 				<div class="oats-box food-box">
+					<img src="image/ingredients_oats.png" alt="" class="oats-img food-img1">
 					<div class="ingredients-details oats">
 						<p class="ingredient-name">Oats</p>
 						<p class="ingredient-description">Main carbohydrate source.</p>
 					</div>
-					<img src="image/ingredients_oats.png" alt="" class="oats-img">
+					<img src="image/ingredients_oats.png" alt="" class="oats-img food-img2">
 				</div>
 				<div class="flaxseed-box food-box">
 					<img src="image/ingredients_flaxseed.png" alt="" class="flaxseed-img">
@@ -77,11 +78,12 @@
 					</div>
 				</div>
 				<div class="almond-box food-box">
+					<img src="image/ingredients_almond.png" alt="" class="almond-img food-img1">
 					<div class="ingredients-details almond">
 						<p class="ingredient-name">Almond</p>
 						<p class="ingredient-description">Omega-3 fatty acids, fiber and protein.</p>
 					</div>
-					<img src="image/ingredients_almond.png" alt="" class="almond-img">
+					<img src="image/ingredients_almond.png" alt="" class="almond-img food-img2">
 				</div>
 
 				<div class="sugar-box food-box">
@@ -93,12 +95,12 @@
 
 				</div>
 				<div class="whey-box food-box">
-
+					<img src="image/ingredients_whey.png" alt="" class="whey-img food-img1">
 					<div class="ingredients-details whey">
 						<p class="ingredient-name">Whey Protein</p>
 						<p class="ingredient-description">Amino acids and main protein source.</p>
 					</div>
-					<img src="image/ingredients_whey.png" alt="" class="whey-img">
+					<img src="image/ingredients_whey.png" alt="" class="whey-img food-img2">
 				</div>
 			</div>
 		</div>
