--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="topbar">
 		<p>
-			Macrolixir . The Savior for the meal skipper
+			Macrolixir &bull; The Savior for the meal skipper
 		</p>
 	</div>
 	<div class="navbar mobile-navbar">
@@ -29,7 +29,7 @@
 			<li id="icon-list">
 				<img src="image/topblock_logo.png" alt="" class="main-logo">
 			</li>
-			<li><a class="work-btn" href="#work">How it work</a></li>
+			<li class="work-list"><a class="work-btn" href="#work">How it work</a></li>
 			<li><a class="macro-btn" href="#macro">Macros</a></li>
 		</ul>
 	</div>
@@ -40,8 +40,8 @@
 			</div>
 			<div class="text-box">
 				<p>A Full Meal Macro in One Convenient Drink</p>
-				<div class="btn-gold">Standard Pack (15 packs) - RM 165</div>
-				<div class="btn-gold">Advance Pack (30 packs) - RM 299</div>
+				<div class="btn-gold standard-pack">Standard Pack (15 packs) - RM 165</div>
+				<div class="btn-gold advance-pack">Advance Pack (30 packs) - RM 299</div>
 			</div>
 			<div class="clearfix"></div>
 		</div>
