--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 			</div>
 			<div class="text-box">
 				<p>A Full Meal Macro in One Convenient Drink</p>
+				<div class="btn-gold advance-pack">Trial Pack (3 packs)</div>
 				<div class="btn-gold standard-pack">Standard Pack (15 packs) - RM 165</div>
-				<div class="btn-gold advance-pack">Advance Pack (30 packs) - RM 299</div>
+
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -55,47 +56,6 @@
 				</p>
 			</div>
 			<img src="image/about_pouch.png" alt="" class="about-img">
-		</div>
-	</section>
-	<section>
-		<div class="mailchimp">
-			<!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="//github.us14.list-manage.com/subscribe/post?u=3e394ca01b95d97f157c72e12&amp;id=7a595cd258" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<h2>Subscribe to our mailing list</h2>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-<div class="mc-field-group">
-	<label for="mce-NAME">Name  <span class="asterisk">*</span>
-</label>
-	<input type="text" value="" name="NAME" class="required" id="mce-NAME">
-</div>
-<div class="mc-field-group size1of2">
-	<label for="mce-MMERGE3">Whatsapp No. </label>
-	<input type="number" name="MMERGE3" class="" value="" id="mce-MMERGE3">
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3e394ca01b95d97f157c72e12_7a595cd258" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='NAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='number';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
 		</div>
 	</section>
 	<section id="ingredient">
@@ -279,8 +239,6 @@
 					</p>
 					<div class="btn-gold btn-purchase">Standard Pack - RM 165</div>
 					<p class="product-detail">* Consists of 15 packs of Macrolixir [400kcal]</p>
-					<div class="btn-gold btn-purchase">Advance Pack - Rm 299</div>
-					<p class="product-detail">* Consists of 30 packs of Macrolixir [400kcal]</p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
