--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
 					</div>
 				</div>
 				<div class="thank-you">
-					<h1>Fuck You</h1>
+					<h1>Thank You for subscribing us</h1>
+					<div class="indicates-required">
+						We'll get back to you within 24 hours.
+					</div>
+					<div class="close-btn">
+						<p>Close</p>
+					</div>
 				</div>
 			</div>
 		</div>
