--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
-	<div class="popup-background">
+	<div id="#trial-popup" class="popup-background trial-popup">
 		<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
 			<div class="flipper">
 				<div class="signup-popup">
@@ -23,17 +23,13 @@
 										By filling up this form, we will reach you shortly. Don't worry we won't spam you
 									</div>
 									<div class="mc-field-group">
-										<input type="email" value="" name="EMAIL" class="required email mailchimp-input" id="mce-EMAIL" placeholder="Email">
+										<input type="text" value="" name="NAME" class="required mailchimp-input" id="mce-NAME" placeholder="Name">
 									</div>
 									<div class="mc-field-group">
-										<input type="text" value="" name="NAME" class="required mailchimp-input" id="mce-NAME" placeholder="Name">
+										<input type="email" value="" name="EMAIL" class="required email mailchimp-input" id="mce-EMAIL" placeholder="Email">
 									</div>
 									<div class="mc-field-group size1of2">
 										<input type="text" name="MMERGE3" class="mailchimp-input" value="" id="mce-MMERGE3" placeholder="Whatsapp No. (Optional)">
-									</div>
-									<div id="mce-responses" class="clear">
-										<div class="response" id="mce-error-response" style="display:none"></div>
-										<div class="response" id="mce-success-response" style="display:none"></div>
 									</div>
 						    		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3e394ca01b95d97f157c72e12_7a595cd258" tabindex="-1" value=""></div>
 						    		<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="subscribe-button">
@@ -54,9 +50,51 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
-
+	<div class="popup-background standard-pack">
+		<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+			<div class="flipper">
+				<div class="signup-popup">
+					<div class="mailchimp">
+						<div id="mc_embed_signup">
+							<form action="//github.us14.list-manage.com/subscribe/post?u=3e394ca01b95d97f157c72e12&amp;id=72e726c12e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						    	<div id="mc_embed_signup_scroll">
+									<p class="pop-up-title">Get started with Standard pack</p>
+									<div class="indicates-required">
+										By filling up this form, we will reach you shortly. Don't worry we won't spam you
+									</div>
+									<div class="mc-field-group">
+										<input type="text" value="" name="NAME" class="required mailchimp-input" id="mce-NAME" placeholder="Name">
+									</div>
+									<div class="mc-field-group">
+										<input type="email" value="" name="EMAIL" class="required email mailchimp-input" id="mce-EMAIL" placeholder="Email">
+									</div>
+									<div class="mc-field-group size1of2">
+										<input type="text" name="MMERGE3" class="mailchimp-input" value="" id="mce-MMERGE3" placeholder="Whatsapp No. (Optional)">
+									</div>
+									<div class="mc-field-group">
+										<input type="text" value="" name="PCODE" class="mailchimp-input" id="mce-PCODE" placeholder="Promo Code">
+									</div>
+						    		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3e394ca01b95d97f157c72e12_7a595cd258" tabindex="-1" value=""></div>
+						    		<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="subscribe-button">
+						    		<p class="cancel">Cancel</p>
+						    	</div>
+							</form>
+						</div>
+					</div>
+				</div>
+				<div class="thank-you">
+					<h1>Thank You for subscribing us</h1>
+					<div class="indicates-required">
+						We'll get back to you within 24 hours.
+					</div>
+					<div class="close-btn">
+						<p>Close</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="topbar">
 		<p>
 			Macrolixir &bull; The Savior for the meal skipper
@@ -87,8 +125,8 @@
 			</div>
 			<div class="text-box">
 				<p>A Full Meal Macro in One Convenient Drink</p>
-				<div class="btn-gold advance-pack">Trial Pack (3 packs)</div>
-				<div class="btn-gold standard-pack">Standard Pack (15 packs) - RM 165</div>
+				<div id="trial-pack" class="btn-gold advance-pack">Trial Pack (3 packs)</div>
+				<div id="standard-pack" class="btn-gold standard-pack">Standard Pack (15 packs) - RM 165</div>
 
 			</div>
 			<div class="clearfix"></div>
@@ -284,7 +322,7 @@
 						You might first time heard about Macrolixir, no worry.
 						Get yourself a trial pack and come back for more if you like it.
 					</p>
-					<div class="btn-gold btn-purchase">Standard Pack - RM 165</div>
+					<div class="btn-gold btn-purchase" id="standard-btn">Standard Pack - RM 165</div>
 					<p class="product-detail">* Consists of 15 packs of Macrolixir [400kcal]</p>
 				</div>
 				<div class="clearfix"></div>
