--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					<img src="image/ingredients_oats.png" alt="" class="oats-img food-img1">
 					<div class="ingredients-details oats">
 						<p class="ingredient-name">Oats</p>
-						<p class="ingredient-description">Main carbohydrate source.</p>
+						<p class="ingredient-description">Main carbohydrate source</p>
 					</div>
 					<img src="image/ingredients_oats.png" alt="" class="oats-img food-img2">
 				</div>
@@ -160,14 +160,14 @@
 					<img src="image/ingredients_flaxseed.png" alt="" class="flaxseed-img">
 					<div class="ingredients-details flaxseed">
 						<p class="ingredient-name">Flaxseed</p>
-						<p class="ingredient-description">Main carbohydrate source.</p>
+						<p class="ingredient-description">Main carbohydrate source</p>
 					</div>
 				</div>
 				<div class="almond-box food-box">
 					<img src="image/ingredients_almond.png" alt="" class="almond-img food-img1">
 					<div class="ingredients-details almond">
 						<p class="ingredient-name">Almond</p>
-						<p class="ingredient-description">Omega-3 fatty acids, fiber and protein.</p>
+						<p class="ingredient-description">Omega-3 fatty acids, fiber and protein</p>
 					</div>
 					<img src="image/ingredients_almond.png" alt="" class="almond-img food-img2">
 				</div>
@@ -175,7 +175,7 @@
 				<div class="sugar-box food-box">
 					<img src="image/ingredients_sugar.png" alt="" class="sugar-img">
 					<div class="ingredients-details sugar">
-						<p class="ingredient-name">Destrose</p>
+						<p class="ingredient-name">Dextrose</p>
 						<p class="ingredient-description">Fast carbohydrate for instant energy</p>
 					</div>
 
@@ -184,7 +184,7 @@
 					<img src="image/ingredients_whey.png" alt="" class="whey-img food-img1">
 					<div class="ingredients-details whey">
 						<p class="ingredient-name">Whey Protein</p>
-						<p class="ingredient-description">Amino acids and main protein source.</p>
+						<p class="ingredient-description">Amino acids and main protein source</p>
 					</div>
 					<img src="image/ingredients_whey.png" alt="" class="whey-img food-img2">
 				</div>
@@ -243,7 +243,7 @@
 						Nutrition Fact
 						</p>
 						<p class="nutrition-description">
-							Serving size: 124g
+							Serving size: 99g
 						</p>
 					</div>
 					<div class="nutrition-subtitle">
@@ -259,7 +259,7 @@
 							<p class="nutrition-fact">Daily Value</p>
 						</div>
 						<div class="nutrition-fact">
-							<p class="nutrition-type">Top Carbohydrate</p>
+							<p class="nutrition-type">Carbohydrate</p>
 							<p class="nutrition-value">50g</p>
 						</div>
 						<div class="nutrition-fact">
@@ -271,11 +271,11 @@
 							<p class="nutrition-value">6.4g</p>
 						</div>
 						<div class="nutrition-fact">
-							<p class="nutrition-type">Top Protein</p>
+							<p class="nutrition-type">Protein</p>
 							<p class="nutrition-value">30g</p>
 						</div>
 						<div class="nutrition-fact">
-							<p class="nutrition-type">Top Fats</p>
+							<p class="nutrition-type">Fats</p>
 							<p class="nutrition-value">9g</p>
 						</div>
 					</div>
