Copy Review; Feb2
Changes to some copy and grammar

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<img src="image/topblock_pouchwithpowder.png" class="jumbo-main-image" alt="">
 			</div>
 			<div class="text-box">
-				<p>A Full Meal Macro in One Convenient Drink</p>
+				<p>Nutritious Meal In 1 Minute</p>
 				<div id="trial-pack" class="btn-gold advance-pack">Trial Pack (3 packs)</div>
 				<div id="standard-pack" class="btn-gold standard-pack">Standard Pack (15 packs) - RM 165</div>
 
@@ -137,7 +137,7 @@
 			<div class="about-box">
 				<p class="about-title">What is Macrolixir ?</p>
 				<p class="about-text">
-					Macrolixir is a powdered food packed with complete macros of one healthy meal. It’s the saviour for people with trouble consuming a proper breakfast. It is also a time-saver to nutritionally fuel the body of people who is running on tight schedule building their empire.
+					Macrolixir is a powdered food packed with complete macros of one nutritious meal. It's the saviour for people with trouble consuming a proper breakfast. It is also a time-saver to nutritionally fuel the body of people who is running on tight schedule building their empire.
 				</p>
 			</div>
 			<img src="image/about_pouch.png" alt="" class="about-img">
@@ -145,7 +145,7 @@
 	</section>
 	<section id="ingredient">
 		<div class="ingredient">
-			<p class="section-title">Ingredient</p>
+			<p class="section-title">Ingredients</p>
 			<p class="section-description">The Finest of the Meal</p>
 			<div class="ingredient-box">
 				<div class="oats-box food-box">
@@ -195,7 +195,7 @@
 	<section id="work">
 		<div class="work">
 			<div class="title-box">
-				<p class="section-title">How it work</p>
+				<p class="section-title">How it works</p>
 				<p class="section-description">Easy & Time-saving</p>
 			</div>
 			<div class="work-box">
@@ -207,12 +207,12 @@
 				<div class="step step2">
 					<img src="image/howitworks_mixicon.png" alt="">
 					<p class="step-title">Mix</p>
-					<p class="step-description">Pour 2 cups of water into the bottle containing powder</p>
+					<p class="step-description">Add 2 cups of water into the shaker</p>
 				</div>
 				<div class="step step3">
 					<img src="image/howitworks_shakeicon.png" alt="">
-					<p class="step-title">Pour</p>
-					<p class="step-description">Mix your fuel by shaking it</p>
+					<p class="step-title">Shake</p>
+					<p class="step-description">Mix your Macrolixir by shaking it</p>
 				</div>
 			</div>
 		</div>
@@ -301,14 +301,14 @@
 				<img src="image/purchase_trialpic3.png" alt="" class="purchase-img">
 				<div class="purchase-detail">
 					<p class="purchase-title">
-						Get a trial now
+						Get Your Trial Pack Now!
 					</p>
 					<p class="purchase-description">
-						You might first time heard about Macrolixir, no worry.
+						This might be your first time hearing about Macrolixir, no worry.
 						Get yourself a trial pack and come back for more if you like it.
 					</p>
 					<div class="btn-gold btn-purchase" id="trial-btn">Connect to get a trial pack</div>
-					<p class="product-detail">* Consists of 2 packs of Macrolixir [400kcal]</p>
+					<p class="product-detail">* Consists of 3 packs of Macrolixir [400kcal]</p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
