--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="signup-popup">
 					<div class="mailchimp">
 						<div id="mc_embed_signup">
-							<form action="//github.us14.list-manage1.com/subscribe/post-json?u=3e394ca01b95d97f157c72e12&amp&id=7a595cd258&c=?" method=get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+							<form action="http://github.us14.list-manage1.com/subscribe/post-json?u=3e394ca01b95d97f157c72e12&id=7a595cd258&c=?" method=get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 						    	<div id="mc_embed_signup_scroll">
 									<p class="pop-up-title">Get your trial pack</p>
 									<div class="indicates-required">
