--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="signup-popup">
 					<div class="mailchimp">
 						<div id="mc_embed_signup">
-							<form id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate trial-pack-validate" target="_blank" novalidate>
+							<form action="//github.us14.list-manage.com/subscribe/post?u=3e394ca01b95d97f157c72e12&amp;id=7a595cd258" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate trial-pack-validate" target="_blank" novalidate>
 						    	<div id="mc_embed_signup_scroll">
 									<p class="pop-up-title">Get your trial pack</p>
 									<div class="indicates-required">
@@ -69,7 +69,7 @@
 									<div class="mc-field-group">
 										<input type="email" value="" name="EMAIL" class="required email mailchimp-input" id="mce-EMAIL" placeholder="Email">
 									</div>
-									<div class="mc-field-group size1of2">
+									<div class="mc-field-group">
 										<input type="text" name="MMERGE3" class="mailchimp-input" value="" id="mce-MMERGE3" placeholder="Whatsapp No. (Optional)">
 									</div>
 									<div class="mc-field-group">
