--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="popup-background standard-pack">
+	<div class="popup-background standard-pack" id="important-background">
 		<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
 			<div class="flipper">
 				<div class="signup-popup">
