change jumbotron button

--- a/index.html
+++ b/index.html
@@ -128,15 +128,20 @@
 			<li><a class="macro-btn" href="#macro">Macros</a></li>
 		</ul>
 	</div>
+
 	<div class="jumbotron">
 		<div class="jumbo-frame">
-			<div class="jumbo-img">
-				<img src="image/topblock_pouchwithpowder.png" class="jumbo-main-image" alt="">
-			</div>
+			<img src="image/topblock_pouchwithpowder.png" class="jumbo-img" alt="">
 			<div class="text-box">
-				<p>Nutritious Meal In 1 Minute</p>
-				<div id="trial-pack" class="btn-gold advance-pack">Trial Pack (3 packs)</div>
-				<div id="standard-pack" class="btn-gold standard-pack">Standard Pack (15 packs) - RM 165</div>
+				<p>Ideal Nutritious in just 1 Minute</p>
+				<div id="trial-pack" class="btn-gold2 advance-pack">
+					<p class="btn-title">Trial Pack <span class="btn-kcal">400Kcal</span></p>
+					<p class="btn-desc">3 packs (contact to know more)</p>
+				</div>
+				<div id="standard-pack" class="btn-gold2 standard-pack">
+					<p class="btn-title">Standard Pack <span class="btn-kcal">400Kcal</span></p>
+					<p class="btn-desc">15 packs x 99g <span class="btn-price">RM165</span></p>
+				</div>
 
 			</div>
 			<div class="clearfix"></div>
