--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 					<img src="image/ingredients_flaxseed.png" alt="" class="flaxseed-img">
 					<div class="ingredients-details flaxseed">
 						<p class="ingredient-name">Flaxseed</p>
-						<p class="ingredient-description">Main carbohydrate source</p>
+						<p class="ingredient-description">Healthy fat source</p>
 					</div>
 				</div>
 				<div class="almond-box food-box">
