add contact button on topbar

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
 		<p>
 			Macrolixir &bull; The Savior for the meal skipper
 		</p>
+		<p class="contact-btn">
+			Contact Us
+		</p>
 	</div>
 	<div class="navbar mobile-navbar">
 		<ul>
