remove contact butotn

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 		<p>
 			Macrolixir &bull; The Savior for the meal skipper
 		</p>
-		<p class="contact-btn">
+		<!--<p class="contact-btn">
 			Contact Us
-		</p>
+		</p>-->
 	</div>
 	<div class="navbar mobile-navbar">
 		<ul>
